k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aks-devops-ingress
  namespace: prod
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - aks.20.31.27.185.nip.io
    secretName: aks-devops-tls
  rules:
  - host: aks.20.31.27.185.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: aks-devops-app-helm-chart
            port:
              number: 80
